# KIV-BIT

./: CMakeLists.txt  README.md  build.sh  install.sh
gmp-6.1.2/: libgmpxx.la
gmp-6.1.2/tests/cxx/: t-assign  t-binary  t-cast  t-constr  t-cxx11  t-do-exceptions-work-at-all-with-this-compiler  t-headers  t-iostream  t-istream  t-locale  t-misc  t-mix  t-ops  t-ops2  t-ops3  t-ostream  t-prec  t-rand  t-ternary  t-unary
include/: HASH.h  RSA.h
lib/: Makefile  config.h  config.m4  config.status  gen-bases  gen-fac  gen-fib  gen-jacobitab  gen-psqr  gen-trialdivtab  gmp.h  libgmp.la  libgmpxx.la  libgmpxx.so.4  libtool
lib/.libs/: libgmp.so.10  libgmpxx.so.4.5.2
lib/cxx/: Makefile
lib/demos/: Makefile
lib/demos/calc/: Makefile
lib/demos/expr/: Makefile
lib/doc/: Makefile
lib/mpf/: Makefile
lib/mpn/: Makefile
lib/mpq/: Makefile
lib/mpz/: Makefile
lib/printf/: Makefile
lib/rand/: Makefile
lib/scanf/: Makefile
lib/tests/: Makefile
lib/tests/cxx/: Makefile
lib/tests/devel/: Makefile
lib/tests/misc/: Makefile
lib/tests/mpf/: Makefile
lib/tests/mpn/: Makefile
lib/tests/mpq/: Makefile
lib/tests/mpz/: Makefile
lib/tests/rand/: Makefile
lib/tune/: Makefile
src/: HASH.cpp  RSA.cpp  main.cpp
